[package]
authors = ["BwareLabs Maintainers <TODO@bwarelabs.com>"]
description = "Tencent COS plugin."
name = "blast-cos-plugin"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/TODO"
license = "Apache-2.0"
homepage = "https://TODO/"
documentation = "https://docs.rs/TODO"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bincode = "1.3.3"
bs58 = "0.4.0"
log = "0.4.17"
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.85"
solana-geyser-plugin-interface = { version = "=1.18.14" }
solana-logger = { version = "1.18.14" }
solana-measure = { version = "1.18.14" }
solana-metrics = { version = "1.18.14" }
solana-runtime = { version = "1.18.14" }
solana-sdk = { version = "1.18.14" }
solana-program = { version = "1.18.14" }
solana-storage-proto = { version = "1.18.14" }
solana-transaction-status = { version = "1.18.14" }
solana-storage-bigtable = { version = "1.18.14" }
thiserror = "1.0.37"
enum-iterator = "1.5.0"
bzip2 = "0.4.4"
flate2 = "1.0.28"
zstd = "0.11.2"
prost = "0.11.9"
prost-build = "0.11.9"
prost-types = "0.11.9"

[dev-dependencies]
libc = "0.2.134"
libloading = "0.7.3"
serial_test = "0.9.0"
socket2 = { version = "0.4.7", features = ["all"] }

solana-account-decoder = { version = "1.18.14" }
solana-core = { version = "1.18.14" }
solana-local-cluster = { version = "1.18.14" }
solana-net-utils = { version = "1.18.14" }
solana-streamer = { version = "1.18.14" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
