[package]
authors = ["BwareLabs Maintainers <TODO@bwarelabs.com>"]
description = "Solana COS plugin."
name = "solana-cos-plugin"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/TODO"
license = "Apache-2.0"
homepage = "https://TODO/"
documentation = "https://docs.rs/TODO"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bincode = "1.3.3"
log = "0.4.17"
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.85"
solana-geyser-plugin-interface = "=1.18.17"
solana-logger = "=1.18.17"
solana-sdk = "=1.18.17"
solana-transaction-status = "=1.18.17"
solana-runtime = "=1.18.17"
solana-program = "=1.18.17"
solana-storage-proto = "=1.18.17"
solana-storage-bigtable = "=1.18.17"
thiserror = "1.0.37"
enum-iterator = "1.5.0"
bzip2 = "0.4.4"
flate2 = "1.0.28"
zstd = "0.11.2"
prost = "0.11.9"
prost-build = "0.11.9"
prost-types = "0.11.9"
chrono = "0.4.38"

[dev-dependencies]
libc = "0.2.134"
libloading = "0.7.3"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
